# olympus-wifi

./: README.md  camera.py  download.py  liveview.py  log2gpx.py  olympus-camera.py  pyproject.toml  setup.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
src/olympuswifi/: camera.py  download.py  errors.py  liveview.py  log2gpx.py  main.py
